--- a/src/css/chart.css
+++ b/src/css/chart.css
@@ -1,5 +1,23 @@
+@font-face {
+    font-family: "Pretendard-Regular";
+    src: url("https://fastly.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Regular.woff") format("woff");
+    font-weight: 400;
+    font-style: normal;
+}
+@font-face {
+    font-family: "Pretendard-SemiBold";
+    src: url("https://fastly.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-SemiBold.woff") format("woff");
+    font-weight: 600;
+    font-style: normal;
+}
+@font-face {
+    font-family: "Pretendard-Bold";
+    src: url("https://fastly.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Bold.woff") format("woff");
+    font-weight: 700;
+    font-style: normal;
+}
 .chart {
-    font-family: 'Pretendard';
+    font-family: "Pretendard";
     width: 1100px;
     height: 1800px;
     background-color: rgb(0, 222, 145);
@@ -34,7 +52,7 @@
     overflow: hidden;
 }
 .chart-song-diff {
-    font-weight: 500;
+    font-weight: 600;
     margin-top: 16px;
     margin-left: 1px; 
     position: absolute;
@@ -86,7 +104,7 @@
 .chart-category-title {
     color: white;
     text-transform: uppercase;
-    font-weight: 800;
+    font-weight: 700;
 }
 .chart-top {
     height: 440px;
