--- a/src/css/chart.css
+++ b/src/css/chart.css
@@ -17,7 +17,6 @@
     font-style: normal;
 }
 .chart {
-    font-family: "Pretendard";
     width: 1100px;
     height: 1800px;
     background-color: rgb(0, 222, 145);
@@ -42,6 +41,7 @@
     margin-left: 1px;
     position: absolute; 
     color: white;
+    font-family: "Pretendard-SemiBold";
     font-weight: 600;
     font-size: 15px;
     z-index: 11; 
@@ -65,6 +65,7 @@
     position: absolute;
     color: white;
     font-size: 11px;
+    font-family: "Pretendard-Regular";
     font-weight: 400;
     text-align: right;
     z-index: 11;
@@ -75,6 +76,7 @@
     position: absolute;
     color: white;
     font-size: 20px;
+    font-family: "Pretendard-SemiBold";
     font-weight: 600;
     text-align: right;
     z-index: 11;
@@ -104,6 +106,7 @@
 .chart-category-title {
     color: white;
     text-transform: uppercase;
+    font-family: "Pretendard-Bold";
     font-weight: 700;
 }
 .chart-top {
