--- a/src/css/chart.css
+++ b/src/css/chart.css
@@ -20,6 +20,7 @@
     width: 1100px;
     height: 1800px;
     background-color: rgb(0, 222, 145);
+    color: white;
 }
 .chart-classic {
     margin-left: 20px;
@@ -39,8 +40,7 @@
 .chart-song-name {
     margin-top: 0px;
     margin-left: 1px;
-    position: absolute; 
-    color: white;
+    position: absolute;
     font-family: "Pretendard-SemiBold";
     font-weight: 600;
     font-size: 15px;
@@ -52,9 +52,10 @@
     overflow: hidden;
 }
 .chart-song-diff {
+    font-family: "Pretendard-SemiBold";
     font-weight: 600;
     margin-top: 16px;
-    margin-left: 1px; 
+    margin-left: 1px;
     position: absolute;
     font-size: 15px;
     z-index: 11;
@@ -63,7 +64,6 @@
     margin-top: 68px;
     width: 98px;
     position: absolute;
-    color: white;
     font-size: 11px;
     font-family: "Pretendard-Regular";
     font-weight: 400;
@@ -74,7 +74,6 @@
     margin-top: 77px;
     width: 99px;
     position: absolute;
-    color: white;
     font-size: 20px;
     font-family: "Pretendard-SemiBold";
     font-weight: 600;
@@ -96,21 +95,21 @@
 .chart-nodata {
     margin-top: 40px;
     margin-left: 21px;
+    font-family: "Pretendard-Regular";
+    font-weight: 400;
     position: absolute;
-    color: white;
     font-size: 16px;
 }
 .chart-category {
     margin-left: 6px;
 }
 .chart-category-title {
-    color: white;
     text-transform: uppercase;
     font-family: "Pretendard-Bold";
     font-weight: 700;
 }
 .chart-top {
-    height: 440px;
+    height: 480px;
 }
 .logo-img {
     position: absolute;
@@ -144,4 +143,10 @@
     margin-left: 0px;
     overflow: hidden;
     z-index: 4;
+}
+.user-data {
+    position: absolute;
+    margin-top: 360px;
+    margin-left: 26px;
+    z-index: 10;
 }
