--- a/src/css/chart.css
+++ b/src/css/chart.css
@@ -24,12 +24,18 @@
 }
 .chart-classic {
     margin-left: 20px;
+    width: 1055px;
+    background-color:rgb(0, 0, 0, 0.4);
 }
 .chart-white {
     margin-left: 20px;
+    width: 1055px;
+    background-color:rgb(0, 0, 0, 0.4);
 }
 .chart-gold {
     margin-left: 20px;
+    width: 1055px;
+    background-color:rgb(0, 0, 0, 0.4);
 }
 .chart-song-block {
     width: 100px; 
@@ -48,7 +54,7 @@
     width: 95px;
     
     text-overflow:ellipsis; 
-    white-space: nowrap; 
+    white-space: nowrap;
     overflow: hidden;
 }
 .chart-song-diff {
@@ -59,6 +65,8 @@
     position: absolute;
     font-size: 15px;
     z-index: 11;
+    overflow: hidden; 
+    white-space: nowrap;
 }
 .chart-song-index {
     margin-top: 68px;
@@ -99,6 +107,9 @@
     font-weight: 400;
     position: absolute;
     font-size: 16px;
+    overflow: hidden; 
+    white-space: nowrap;
+    
 }
 .chart-category {
     margin-left: 6px;
@@ -147,6 +158,28 @@
 .user-data {
     position: absolute;
     margin-top: 360px;
-    margin-left: 26px;
+    margin-left: 50px;
     z-index: 10;
+    background-color: rgb(0, 0, 0, 0.4);
+}
+.user-data-block {
+    border: 2px solid white;
+    display: inline-block;
+    border-radius: 10px;
+    box-shadow: 4px 4px white, 4px 4px 10px rgb(0, 0, 0, 0.25);
+
+    margin-right: 40px;
+    padding-left: 5px;
+    padding-right: 20px;
+}
+.user-data-text {
+    font-size: 32px;
+    font-family: "Pretendard-Bold";
+    margin-top: 25px;
+    margin-bottom: 5px;
+}
+.user-data-title {
+    position: absolute;
+    font-size: 18px;
+    margin-top: 10px;
 }
